# SWTL

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  run
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: CMakeLists.txt  forward_list.cppm  main.cpp  vector.cppm  vector.hpp
src/containers/: forward_list.cppm  vector.cppm
src/core/: format.cppm  memory.cppm
tests/: CMakeLists.txt  test_main.cpp  vector_tests.cpp
tests/helpers/: swtl_test_helper_functions.cppm  swtl_test_helper_objects.cppm  swtl_test_helpers.cppm
